# predictive-analytics-system

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml
notebooks/: 01_eda_telco_churn.ipynb
reports/: evaluation_baseline.md  experiments.md
src/predictive_analytics_system/: data.py  evaluate.py  hello.py  train.py
tests/: test_data.py  test_dataLoading.py  test_hello.py
