[project]
name = "predictive-analytics-system"
version = "0.1.0"
description = "CPU-friendly end-to-end predictive analytics ML project"
requires-python = ">=3.10"
dependencies = []

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
